Ehhhh, to many updates to explain. Lets just say JDA is making a lot of... ehhh... changes